# smile-detector

./: .gitignore  README.md  database.py  detector.py  main.py  pyproject.toml  requirements.txt
frontend/: index.html
